tests/ui/parse/missing_semi.rx
//@ spec: RXS-0024, RXS-0030
fn f() {
    let a = 1 let b = 2; //~ ERROR RX0008
}
